Spelling fixes. From sthen@.

--- a/cvs2gitdump.1
+++ b/cvs2gitdump.1
@@ -21,7 +21,7 @@
 is a small python script which imports a cvs tree into a git repository.
 .Nm
 has a small footprint, supports incremental imports and converts tags to HEAD.
-It's very fast because the conversion is done on memory.
+It's very fast because the conversion is done in memory.
 .Pp
 Options:
 .Bl -tag -width Ds
