--- a/cvs2svndump.1
+++ b/cvs2svndump.1
@@ -19,7 +19,7 @@
 is a small python script which imports a cvs tree into a subversion repository.
 .Nm
 has a small footprint and supports incremental imports. It's very fast because
-the conversion is done on memory.
+the conversion is done in memory.
 .Pp
 Options:
 .Bl -tag -width Ds
